--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
         </p>
     </span>
     </article>
+    <div>
+      <h2 class="o-title">Osvaldo <span>Escobar</span></h2>
+      <p class="o-description">My description: <span>Web Developer</span></p>
+    </div>
 </div>  
 
 </body>
